# agentspan-fork

./: .gitignore  AGENTS.md  README.md  mkdocs.yml
.github/workflows/: ci.yml  jira-sync.yml  release-csharp-sdk.yml
cli/: go.mod
cli/client/: client.go  client_test.go
cli/cmd/: doctor.go  prune.go  run.go  run_test.go  server.go  server_test.go  skill.go  skill_test.go  testhelpers_test.go
docs/: cli.md  index.md  quickstart.md
docs/concepts/: plan-execute.md  skills.md  testing.md
docs/python-sdk/: skills.md
sdk/python/: pyproject.toml
sdk/python/e2e/: test_suite10_code_execution.py  test_suite12_termination_gates.py  test_suite14_stateful_domain.py  test_suite15_skills.py  test_suite16_cli_skills.py  test_suite20_plan_execute.py  test_suite2_tool_calling.py  test_suite6_pdf_tools.py  test_suite7_media_tools.py
sdk/python/examples/: 02c_tool_retry_config.py  02d_retry_policy_live_test.py  04_mcp_weather.py  103_plan_and_compile.py  104_plan_execute_guardrails.py  106_plan_execute_agent_fanout.py  107_pac_mcp_proof.py  108_plan_execute_refs.py  109_plan_execute_replan.py  110_plan_execute_replan_solve.py  111_plan_execute_replan_binsearch.py  112_dowhile_loop_inside_workflow.py  113_aml_sar_investigation_loop.py  114_portfolio_rebalance_loop.py  115_plan_execute_planner_context.py  85_plan_execute_harness.py  86_coding_agent.py
sdk/python/examples/blog-and-video-examples/handoff/: 03_issue_triage_github_discord.py  03_issue_triage_handoff.py
sdk/python/examples/blog-and-video-examples/manual/: 07_editorial_manual.py
sdk/python/examples/blog-and-video-examples/parallel_execution/: 02_code_review_parallel.py  02_code_review_parallel_github.py
sdk/python/examples/blog-and-video-examples/random/: 06_brainstorm_random.py  07_brainstorm_random_blog.docx  07_brainstorm_random_blog.md
sdk/python/examples/blog-and-video-examples/round_robin/: 06_code_review_debate.py
sdk/python/examples/blog-and-video-examples/sequential_pipeline/: 02_support_ticket_pipeline.py  02_support_ticket_zendesk.py
sdk/python/examples/blog-and-video-examples/swarm/: 04_support_swarm.py
sdk/python/examples/blog_and_videos/email-subscription-agent/: README.md  subscription-agent.py
sdk/python/feature_requests/evals/: mockup_phase1_eval_results.html
sdk/python/src/agentspan/agents/: __init__.py  agent.py  config_serializer.py  plans.py  result.py  skill.py  tool.py
sdk/python/src/agentspan/agents/runtime/: runtime.py  tool_registry.py
sdk/python/tests/integration/: test_guardrail_matrix.py  test_pac_toolType_routing_e2e.py  test_plan_execute_live.py  test_retry_policy.py
sdk/python/tests/unit/: test_agent.py  test_claude_agent_sdk_worker.py  test_credential_injection_integration.py  test_example_109_replan_loop.py  test_example_110_solve_loop.py  test_example_111_binsearch.py  test_example_113_aml.py  test_example_114_rebalance.py  test_guardrail.py  test_hybrid_transfer_workers.py  test_langchain_executor_example.py  test_langchain_worker.py  test_langgraph_checkpointer_example.py  test_langgraph_react_example.py  test_langgraph_stategraph_example.py  test_langgraph_worker.py  test_passthrough_registration.py  test_plan_dataclass_determinism.py  test_planner_context.py  test_result.py  test_runtime.py  test_skill.py  test_swarm_handoff_check.py  test_tool.py
server/: build.gradle
(+545 files in other folders)
