[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentspan"
version = "0.1.0"
description = "Agentspan SDK — durable, scalable, observable AI agents"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "conductor-python>=1.3.11",
    "httpx>=0.24",
    "cloudpickle>=2.0",
    "google-adk>=1.27.1",
    "openai-agents>=0.12.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
agentspan = "agentspan.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
testing = [
    # /dg #11: bound the anthropic floor at the patched range for CVE-2026-
    # 34450 (memory-tool mode-0666) and CVE-2026-34452 (symlink-retarget
    # TOCTOU). Loose upper bound — bump deliberately when a new major lands.
    # No tight upper-bound on ``openai`` because ``openai-agents>=0.12.2``
    # (already a transitive of the validation extras) pins ``openai>=2.26``,
    # and we don't want to fight resolver fights with downstream deps that
    # track the latest openai-python.
    "anthropic>=0.40",
    "openai>=2.0",
]
validation = [
    "openai-agents>=0.1",
    "google-adk>=1.18.0",
    "openai>=1.0",
    "litellm>=1.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.entry-points."pytest11"]
agentspan-testing = "agentspan.agents.testing.pytest_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
timeout_method = "thread"
markers = [
    "integration: marks tests requiring a live Agentspan server (deselect with '-m \"not integration\"')",
    "e2e: marks end-to-end tests requiring a live Agentspan server and AGENTSPAN_SERVER_URL env var",
    "sse: marks tests requiring SSE streaming support (requires AGENTSPAN_STREAMING_ENABLED=true)",
    "agent_correctness: marks tests as agent correctness tests",
    "semantic: marks tests that use LLM judge for semantic assertions (requires litellm)",
]

[tool.coverage.run]
source = ["agentspan.agents"]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 1

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
no_strict_optional = true

[dependency-groups]
dev = [
    "claude-code-sdk>=0.0.20",
    "langchain>=0.3.28",
    "langchain-core>=0.3.83",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.11",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
